resources/angular-frontend/ingress.deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${ENVIRONMENT}-${REPOSITORY}-ingress
  namespace: ${NAMESPACE}
  # annotations:
  #   nginx.ingress.kubernetes.io/configuration-snippet: |
  #     try_files $uri $uri/ /index.html;
spec:
  ingressClassName: nginx
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${ENVIRONMENT}-${REPOSITORY}
                port:
                  number: 80
